# skriptoteket

./: .dockerignore  .env.example  .env.example.prod  .gitignore  .pre-commit-config.yaml  .windsurfrules  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.runner  GEMINI.md  README.md  alembic.ini  compose.dev.yaml  compose.observability.yaml  compose.prod.yaml  compose.runner.yaml  compose.yaml  doc_structure_requirements.md  docker-compose.yml  project_outline.md  pyproject.toml
.agent/: AGENTS.md  handoff.md  next-session-instruction-prompt-template.md  next-session-instruction-prompt.md  readme-first.md  review-task-mobile-compatibility.md
.agent/rules/: 000-rule-index.md  010-foundational-principles.md  020-monolith-architecture.md  030-event-driven-patterns.md  040-fastapi-blueprint.md  042-async-di-patterns.md  045-huleedu-design-system.md  048-error-handling.md  050-python-standards.md  053-sqlalchemy-patterns.md  054-alembic-migrations.md  060-docker-and-compose.md  070-testing-standards.md  075-browser-automation.md  090-observability-index.md  091-structured-logging.md  092-health-and-metrics.md  093-distributed-tracing.md  094-observability-infrastructure.md  096-review-workflow.md
.agent/sessions/: session-epic-05-huleedu-design-harmonization.md  session-st08-10-script-editor-intelligence-review.md
.claude/agents/: frontend-specialist.md
.github/: copilot-instructions.md
.github/workflows/: docs-validate.yml
app/: main.py
docs/: index.md
docs/_meta/: README.md  docs-contract.yaml
docs/adr/: adr-0001-ui-server-driven-htmx.md  adr-0002-backend-fastapi.md  adr-0003-script-taxonomy-professions-and-categories.md  adr-0004-clean-architecture-ddd-di.md  adr-0005-user-roles-and-script-governance.md  adr-0006-identity-and-authorization-mvp.md  adr-0007-defer-kafka-until-needed.md  adr-0008-testing-strategy-and-testcontainers-timing.md  adr-0009-auth-local-sessions-admin-provisioned.md  adr-0010-accepting-suggestions-creates-draft-tool.md  adr-0011-huleedu-identity-federation.md  adr-0012-script-source-storage.md  adr-0013-execution-ephemeral-docker.md  adr-0014-versioning-and-single-active.md  adr-0015-runner-contract-and-compatibility.md  adr-0016-execution-concurrency-and-backpressure.md  adr-0017-huleedu-design-system-adoption.md  adr-0018-observability-structured-logging-and-correlation.md  adr-0019-observability-health-metrics-and-tracing.md  adr-0020-responsive-mobile-adaptation.md  adr-0021-http-security-headers.md  adr-0022-coding-assistant-contract-first.md  adr-0022-tool-ui-contract-v2.md  adr-0023-curated-apps-registry-and-execution.md  adr-0024-tool-sessions-and-ui-payload-persistence.md  adr-0025-embedded-spa-islands.md  adr-0026-observability-stack-infrastructure.md  adr-0027-full-vue-vite-spa.md  adr-0028-spa-hosting-and-routing-integration.md  adr-0029-frontend-styling-pure-css-design-tokens.md  adr-0030-openapi-as-source-and-openapi-typescript.md  adr-0031-multi-file-input-contract.md  adr-0032-frontend-styling-tailwind-v4-theme.md  adr-0032-tailwind-4-theme-tokens.md  adr-0033-admin-tool-status-enrichment.md  adr-0034-self-registration-and-user-profiles.md  adr-0035-script-editor-intelligence-architecture.md  adr-0036-tool-usage-instructions.md  adr-0037-toast-and-system-messages-spa.md  adr-0037-tool-slug-lifecycle.md  (+26 more)
docs/prd/: prd-editor-sandbox-v0.1.md  prd-script-hub-v0.1.md  prd-script-hub-v0.2.md  prd-script-hub-v0.3-coding-assistant.md  prd-spa-frontend-v0.1.md  prd-tool-authoring-v0.1.md
docs/reference/: ref-ai-completion-architecture.md  ref-ai-script-generation-kb-llm.md  ref-ai-script-generation-kb.md  ref-architecture.md  ref-codemirror-integration.md  ref-dynamic-tool-scripts.md  ref-editor-sandbox-preview-plan.md  ref-execution-architecture.md  ref-frontend-test-gaps-2025-12-29.md  ref-hemma-critical-paths-2026-01-06.md  ref-home-server-architecture.md  ref-home-server-cleanup-timers.md  ref-home-server-cli-tools.md  ref-home-server-nginx-proxy.md  (+10 more)
frontend/: .npmrc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
jupyter_scripts/: VH_mejl_från_IST_till_Outlook.ipynb  demo_notebook_patterns.ipynb
migrations/: env.py
runner/: README.md  _runner.py  pdf_helper.py  skriptoteket_toolkit.py  tool_errors.py
scripts/: __init__.py  _playwright_config.py  chat_edit_ops_context_probe.py  check_agent_doc_budgets.py  diagnose_ghost_text.py  edit_ops_harness.py  export_openapi_v1.py  export_runbook_pdf_html.py  fix_md_spacing.py  llama_grammar_check.py  playwright_editor_island_smoke.py  playwright_hmr_probe.py  playwright_nav_transitions_smoke.py  playwright_runtime_island_smoke.py  playwright_spa_admin_pending_review_badges_check.py  playwright_spa_brand_alignment_check.py  playwright_spa_editor_metadata_check.py  playwright_st_06_11_quick_fix_actions_e2e.py  playwright_st_06_12_lint_panel_navigation_e2e.py  playwright_st_08_10_script_editor_intelligence_e2e.py  playwright_st_08_11_script_editor_intelligence_phase2_e2e.py  playwright_st_08_12_script_editor_intelligence_phase3_e2e.py  playwright_st_08_13_tool_usage_instructions_e2e.py  playwright_st_08_14_ai_inline_completions_e2e.py  playwright_st_08_16_ai_edit_suggestions_e2e.py  playwright_st_08_20_editor_chat_drawer_check.py  playwright_st_08_22_edit_ops_diff_scroll_check.py  playwright_st_08_24_working_copy_diff_scroll_check.py  playwright_st_11_07_spa_tool_run_e2e.py  playwright_st_11_08_spa_my_runs_e2e.py  playwright_st_11_09_curated_app_e2e.py  playwright_st_11_15_spa_my_tools_e2e.py  playwright_st_11_16_editor_workflow_actions_e2e.py  playwright_st_11_18_editor_maintainers_e2e.py  playwright_st_11_19_help_mobile_menu_check.py  playwright_st_11_21_login_modal_e2e.py  playwright_st_12_02_native_pdf_output_helper_e2e.py  playwright_st_12_03_personalized_tool_settings_e2e.py  playwright_st_12_05_session_file_persistence_e2e.py  playwright_st_14_03_editor_sandbox_html_to_pdf_preview_e2e.py  (+15 more)
stakeholders/: guide-teacher-developers.md  server_runbook_pdf.html  sommarskuggan.html  tooleditor_flow.html
tests/: conftest.py  test_openapi_contracts.py  test_smoke.py
(+1487 files in other folders)
