[project]
name = "hule-script-hub"
version = "0.1.0"
description = "Server-driven Script Hub for upload-based tools (csv/xlsx/docx/pdf/md/py) with HTMX-friendly UIs."
authors = [
    { name = "Olof Larsson", email = "paunchygent@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
license = { text = "MIT" }

# Runtime dependencies for the web app + ingest pipeline + your preferred core libs.
dependencies = [
    # Config / settings
    "python-dotenv",
    "pydantic",
    "pydantic-settings",
    "structlog",

    # Web app (server-driven UI)
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",

    # DI + persistence
    "dishka",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "docker",

    # Security
    "argon2-cffi",

    # Email
    "aiosmtplib>=3.0",

    # Observability
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",

    # Tool registry + docs contract validation helpers
    "pyyaml",

    # Ingest / parsing
    "pandas",
    "openpyxl",
    "python-docx",
    "pypdf",

    # Preferred core libs (kept in runtime since you want them broadly available)
    "aiohttp",
    "httpx",
    "psutil",
    "typer",
    "click",
    "pypandoc",
    "weasyprint",
]

[dependency-groups]
# Repository tooling (lint/type/test/hooks + validation tooling)
monorepo-tools = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-xdist",
    "pytest-timeout",
    "testcontainers",
    "pre-commit",
    "jsonschema",
    "pyyaml",
    "types-psutil",
    "pandas-stubs",
    "types-openpyxl>=3.1.5.20250919",
    "types-docker>=7.1.0.20251202",
    "types-requests>=2.32.4.20250913",
]

# "Dev everything" extras that are useful locally but not required in prod images.
dev = [
    "coverage>=7.9.2",

    # If you want local PDF generation alternatives / experiments
    "reportlab",
    "types-reportlab",

    # Browser automation for visual testing
    "playwright",
    "selenium",
]

# Optional groups (install when needed)
llm = [
    "google-genai>=1.49.0",
    "tiktoken>=0.12.0",
    "mistral-common>=1.5.6",
]

analysis = [
    "numpy",
    "scipy",
    "pyarrow",
    "fastparquet",
    "matplotlib",
    "plotly",
    "tabulate",
    "types-tabulate",
]

tui = [
    "textual",
    "textual-filedrop",
    "crossfiledialog",
]

docs = [
    # If you later choose to publish docs as a site; keep optional to avoid forcing mkdocs.
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    ".git",
    ".venv",
    ".cache",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".pdm-python",
    ".pdm-build",
    "dist",
    "build",
    "jupyter_scripts",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
]
ignore = [
    "E203",  # whitespace before ':' (conflicts with black)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
# Intentional re-exports
"src/**/__init__.py" = ["F401"]

# Scripts may prefer pragmatic patterns
"scripts/**/*.py" = ["E501"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
explicit_package_bases = true
namespace_packages = true
plugins = ["pydantic.mypy"]

# Typical src-layout
mypy_path = "src:stubs"
exclude = [
    "scripts/",
    "docs/",
]

# External libraries without type stubs (or incomplete stubs)
[[tool.mypy.overrides]]
module = [
    "yaml.*",
    "pypandoc.*",
    "weasyprint.*",
    "pypdf.*",
    "docx.*",
    "pandas.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "testcontainers.*",
]
ignore_missing_imports = true
disable_error_code = [
    "import-untyped",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*test*",
    "*__pycache__*",
    "*venv*",
    "*.venv*",
    "*migrations*",
    "*setup.py",
    "*__init__.py",
    "*dist-packages*",
    "*site-packages*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "raise ImportError",
    "if __name__ == .__main__.:",
    "pass",
    "if TYPE_CHECKING:",
    "@overload",
    "@abstractmethod",
    "@property",
    "@classmethod",
    "@staticmethod",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = [
    "src",
    ".",
    "runner",
]
python_files = "test_*.py *_test.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-s -v --durations=10 --log-cli-level=INFO --import-mode=importlib -m 'not (financial or slow or docker)'"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"

markers = [
    "financial: marks tests that incur real monetary costs via external API calls",
    "slow: marks tests as slow running",
    "integration: marks tests requiring external services",
    "docker: marks tests that need docker compose setup",
    "e2e: marks tests as end-to-end pipeline tests",
    "unit: marks tests as unit tests for isolated component testing",
    "timeout: marks tests with specific timeout requirements",
]

filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:testcontainers.*",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
# App runtime
dev = "uvicorn --app-dir src skriptoteket.web.app:app --reload --host 127.0.0.1 --port 8000"
dev-logs = "sh -c 'mkdir -p .artifacts && WATCHFILES_FORCE_POLLING=true WATCHFILES_POLL_DELAY_MS=300 pdm run dev 2>&1 | tee .artifacts/dev-backend.log'"
dev-local = "sh -c 'pdm run dev-logs & pdm run fe-dev-logs & wait'"
kill-dev = "pkill -f 'uvicorn.*skriptoteket'"
dev-docker = "uvicorn --app-dir src skriptoteket.web.app:app --reload --host 0.0.0.0 --port 8000"
serve = "uvicorn --app-dir src skriptoteket.web.app:app --host 0.0.0.0 --port 8000 --proxy-headers --forwarded-allow-ips='*'"
ui-smoke = "python -m scripts.playwright_ui_smoke"
ui-editor-smoke = "python -m scripts.playwright_ui_editor_smoke"
ui-runtime-smoke = "python -m scripts.playwright_ui_runtime_smoke"
ui-hmr-probe = "python -m scripts.playwright_hmr_probe"
openapi-export-v1 = "python -m scripts.export_openapi_v1"
fe-gen-api-types = { composite = [
    "python -m scripts.export_openapi_v1",
    "pnpm -C frontend --filter @skriptoteket/spa gen:api-types",
] }

# Frontend (full SPA; ADR-0027/ADR-0029)
fe-install.cmd = "pnpm install"
fe-install.working_dir = "frontend"

fe-dev.cmd = "pnpm --filter @skriptoteket/spa dev"
fe-dev.working_dir = "frontend"
fe-dev-logs.cmd = "sh -c 'mkdir -p ../.artifacts && pnpm --filter @skriptoteket/spa dev 2>&1 | tee ../.artifacts/dev-frontend.log'"
fe-dev-logs.working_dir = "frontend"

fe-build.cmd = "pnpm --filter @skriptoteket/spa build"
fe-build.working_dir = "frontend"

fe-build-watch.cmd = "pnpm --filter @skriptoteket/spa build:watch"
fe-build-watch.working_dir = "frontend"

fe-preview.cmd = "pnpm --filter @skriptoteket/spa preview"
fe-preview.working_dir = "frontend"

fe-type-check.cmd = "pnpm --filter @skriptoteket/spa typecheck"
fe-type-check.working_dir = "frontend"

fe-lint.cmd = "pnpm --filter @skriptoteket/spa lint"
fe-lint.working_dir = "frontend"

fe-lint-fix.cmd = "pnpm --filter @skriptoteket/spa lint:fix"
fe-lint-fix.working_dir = "frontend"

fe-test.cmd = "pnpm --filter @skriptoteket/spa test"
fe-test.working_dir = "frontend"

fe-test-watch.cmd = "pnpm --filter @skriptoteket/spa test:watch"
fe-test-watch.working_dir = "frontend"

fe-test-coverage.cmd = "pnpm --filter @skriptoteket/spa test:coverage"
fe-test-coverage.working_dir = "frontend"

# Code quality
format = "ruff format --force-exclude ."
lint = { composite = [
    "ruff format --check --diff --force-exclude .",
    "ruff check --force-exclude .",
    "python -m scripts.check_agent_doc_budgets",
    "python -m scripts.validate_docs",
] }
lint-fix = "ruff check --fix --force-exclude ."
typecheck = "mypy --config-file pyproject.toml src tests"

# Tests
test = "pytest"
test-parallel = "pytest -n auto"
test-sequential = "pytest -n 0"

# Docs-as-code governance
docs-validate = "python -m scripts.validate_docs"

# Agent skills (repo-local)
skills-prompt = "python -m scripts.skills_prompt"
skills-validate = "python -m scripts.skills_prompt --validate"

# Dependency locking (multi-platform)
lock-multi = "pdm lock --platform macos_14_0_arm64 --platform manylinux_2_40_x86_64 --platform manylinux_2_41_aarch64"

# Database
db-upgrade = "alembic upgrade head"

# Admin bootstrap
bootstrap-superuser = { cmd = "python -m skriptoteket.cli bootstrap-superuser", env = { PYTHONPATH = "src" } }
provision-user = { cmd = "python -m skriptoteket.cli provision-user", env = { PYTHONPATH = "src" } }
artifacts-prune = { cmd = "python -m skriptoteket.cli prune-artifacts", env = { PYTHONPATH = "src" } }
cleanup-session-files = { cmd = "python -m skriptoteket.cli cleanup-session-files", env = { PYTHONPATH = "src" } }
cleanup-sandbox-snapshots = { cmd = "python -m skriptoteket.cli cleanup-sandbox-snapshots", env = { PYTHONPATH = "src" } }
clear-all-session-files = { cmd = "python -m skriptoteket.cli clear-all-session-files", env = { PYTHONPATH = "src" } }
seed-script-bank = { cmd = "python -m skriptoteket.cli seed-script-bank", env = { PYTHONPATH = "src" } }

# Docker dev workflow (compose base + dev overrides)
dev-start = "docker compose -f compose.yaml -f compose.dev.yaml up -d"
dev-stop = "docker compose -f compose.yaml -f compose.dev.yaml down"
dev-restart = "docker compose -f compose.yaml -f compose.dev.yaml restart"
dev-recreate = "docker compose -f compose.yaml -f compose.dev.yaml up -d --force-recreate"
dev-build-start = "docker compose -f compose.yaml -f compose.dev.yaml up -d --build"
dev-rebuild = "docker compose -f compose.yaml -f compose.dev.yaml up -d --build --force-recreate"
dev-containers-logs = "docker compose -f compose.yaml -f compose.dev.yaml logs -f web frontend"
dev-build-start-clean = { composite = [
    "docker compose -f compose.yaml -f compose.dev.yaml build --no-cache",
    "docker compose -f compose.yaml -f compose.dev.yaml up -d --force-recreate",
] }

dev-db-reset = { composite = [
    "docker compose -f compose.yaml -f compose.dev.yaml down --volumes --remove-orphans",
    "docker compose -f compose.yaml -f compose.dev.yaml up -d",
] }

# Observability stack (Prometheus, Grafana, Jaeger, Loki)
obs-start = "docker compose -f compose.observability.yaml up -d"
obs-stop = "docker compose -f compose.observability.yaml down"
obs-restart = "docker compose -f compose.observability.yaml restart"
obs-logs = "docker compose -f compose.observability.yaml logs -f"
obs-status = "docker compose -f compose.observability.yaml ps"

# Pre-commit convenience
precommit-install = "pre-commit install"
precommit-run = "pre-commit run --all-files"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
